--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@hapi/joi": "^15.1.0",
     "bcrypt": "^3.0.6",
+    "config": "^3.2.2",
     "express": "^4.17.1",
     "fawn": "^2.1.5",
     "joi-objectid": "^2.0.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.6.6"
   }
