--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^3.0.6",
     "config": "^3.2.2",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
     "joi-objectid": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
