--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "joi-objectid": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "mongoose": "^5.6.6"
+    "mongoose": "^5.6.6",
+    "winston": "^3.2.1"
   }
 }
