--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^15.1.0",
+    "app-root-path": "^2.2.1",
     "bcrypt": "^3.0.6",
     "config": "^3.2.2",
     "express": "^4.17.1",
@@ -20,7 +21,8 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.6.6",
+    "morgan": "^1.9.1",
     "winston": "^3.2.1",
-    "winston-mongodb": "^3.0.0"
+    "winston-mongodb": "^4.0.0"
   }
 }
