--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -24,5 +24,6 @@
     "morgan": "^1.9.1",
     "winston": "^3.2.1",
     "winston-mongodb": "^4.0.0"
-  }
+  },
+  "devDependencies": {}
 }
