--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@hapi/joi": "^15.1.0",
     "app-root-path": "^2.2.1",
     "bcrypt": "^3.0.6",
+    "compression": "^1.7.4",
     "config": "^3.2.2",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
+    "helmet": "^3.20.0",
     "jest": "^24.8.0",
     "joi-objectid": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
