--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll --verbose --detectOpenHandles --coverage ./tests",
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "node index.js"
   },
   "engines": {
     "node": "10.16.0"
