--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.6.6",
     "morgan": "^1.9.1",
-    "winston": "^3.2.1",
-    "winston-mongodb": "^4.0.0"
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "supertest": "^4.0.2"
